# waddles

./: .dockerignore  .gitignore  .pep8  Dockerfile  GEMINI.md  LICENSE  README.md  agent_workflows.py  bot.py  config.py  database.py  docker-compose.yml  dontreadme.md  events.py  index_manager.py  llm.py  main.py  prompts.py  pyproject.toml  requirements.txt  sync.sh  tools.py  workflow.py  workflows.py
.github/workflows/: deploy.yml
archives/: bot-2.py  bot-langchain.py  bot-old.py
magic/: Dockerfile  bot.py  proxy.py  requirements.txt
tools/: delegate.py  docs_search.py  python_run.py  stock_info.py  tools.py  user_info.py  web_scrape.py  web_search.py
