[project]
name = "waddles"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "ddgs>=9.11.2",
    "discord-py==2.3.2",
    "llama-index>=0.14.16",
    "llama-index-core>=0.14.16",
    "llama-index-embeddings-ollama>=0.8.6",
    "llama-index-llms-ollama>=0.9.1",
    "llama-index-llms-openai-like>=0.6.0",
    "llama-index-readers-file>=0.5.6",
    "llama-index-vector-stores-chroma>=0.5.5",
    "ocflib",
]

[tool.uv.sources]
ocflib = { git = "https://github.com/ocf/ocflib.git" }
