[project]
name = "waddles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "autopep8>=2.3.2",
    "beautifulsoup4==4.14.3",
    "chromadb==1.5.5",
    "ddgs>=9.11.3",
    "discord-py==2.3.2",
    "llama-index==0.14.16",
    "llama-index-core==0.14.16",
    "llama-index-embeddings-ollama==0.8.6",
    "llama-index-llms-ollama==0.9.1",
    "llama-index-llms-openai-like==0.6.0",
    "llama-index-readers-file==0.5.6",
    "llama-index-retrievers-bm25>=0.7.1",
    "llama-index-vector-stores-chroma==0.5.5",
    "ocflib",
    "trafilatura>=2.0.0",
    "yfinance>=1.2.2",
]

[tool.uv.sources]
ocflib = { git = "https://github.com/ocf/ocflib.git", rev = "31d446a36245fe4213970d6a8d200067128e8b05" }

[tool.uv]
managed = true

